--- a/daygrade/src/index.css
+++ b/daygrade/src/index.css
@@ -928,7 +928,11 @@
 }
 
 #light #logs {
-  background-color: #f3f0e8;
+  background: rgba(255, 255, 255, 0.403);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(10px);
 }
 
 #light #not-found {
