--- a/daygrade/src/styles.css
+++ b/daygrade/src/styles.css
@@ -21,6 +21,8 @@
     'days squares';
   grid-template-columns: auto 1fr;
   grid-gap: 10px;
+  overflow-x: scroll;
+  width: 90%;
 }
 
 .months {
@@ -40,6 +42,14 @@
     calc(var(--week-width) * 5) /* Dec */;
 }
 
+#dark .months {
+  color: white;
+}
+
+#dark .days {
+  color: white;
+}
+
 .days,
 .squares {
   display: grid;
@@ -52,17 +62,8 @@
   grid-auto-columns: var(--square-size);
 }
 
-/* Other styling */
-
-body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
-    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  font-size: 12px;
-}
-
 .graph {
   padding: 20px;
-  border: 1px #e1e4e8 solid;
   margin: 20px;
 }
 
@@ -71,7 +72,11 @@ body {
 }
 
 .squares li {
-  background-color: #ebedf0;
+  background-color: rgb(252, 252, 252);
+}
+
+.squares li[data-level='-1'] {
+  background-color: #eeeeee;
 }
 
 .squares li[data-level='1'] {
@@ -84,4 +89,36 @@ body {
 
 .squares li[data-level='3'] {
   background-color: #196127;
+}
+
+#dark .squares li {
+  background-color: rgb(48, 48, 48);
+}
+
+#dark .squares li[data-level='-1'] {
+  background-color: rgb(55, 55, 55);
+}
+
+#dark .squares li[data-level='1'] {
+  background-color: #c6e48b;
+}
+
+#dark .squares li[data-level='2'] {
+  background-color: yellow;
+}
+
+#dark .squares li[data-level='3'] {
+  background-color: yellow;
+}
+
+#dark #streak-title {
+  color: white;
+}
+
+#dark #current-streak-box {
+  background-color: #282c35;
+}
+
+#dark #longest-streak-box {
+  background-color: #282c35;
 }
